# noisefloor

./: .gitignore  Dockerfile  README.md  WHITEPAPER.md  docker-compose.yml  noisefloor_demo.py  pyproject.toml
dashboard/: package-lock.json  package.json
dashboard/src/: App.jsx  index.css
dashboard/src/components/: AgentMonitor.jsx  Overview.jsx  SPRTChart.jsx
dashboard/src/services/: mockData.js
helm/: Chart.yaml  values.yaml
noisefloor/: __init__.py  compare.py  config.py  exceptions.py  log.py  power.py  sprt.py  telemetry.py
noisefloor/ci/: cli.py  pytest_plugin.py
noisefloor/core/: __init__.py  aci.py  autotune.py  conformal.py  effect_size.py  signer.py  state.py  trajectory.py  utils.py  verdicts.py
noisefloor/integrations/: __init__.py  agent_guard.py  routing.py
noisefloor/judges/: __init__.py  conformal.py  llm.py
noisefloor/quant/: __init__.py  audit.py  cpcv.py  dsr.py  implementation_risk.py  metrics.py  pbo.py
noisefloor/runner/: __init__.py  async_queue.py  interfaces.py  rate_limiters.py
noisefloor/server/: api.py  models.py
plans/: antigravity_implementation_plan.md  final_verdictopus_#1.md  implementation_plan.md  implementation_plan2.md  implementation_plan3.md  implementation_plan6.md  implementation_plan7.md  info.md  noisefloor_implementation_plan.md
risklayer/: __init__.py  api.py  auto.py  bootstrap.py  config.py  exceptions.py  log.py  multiple.py  power.py  telemetry.py
risklayer-dashboard/: index.html  package-lock.json  package.json
risklayer-dashboard/src/: App.css  App.tsx  index.css
risklayer/agent/: __init__.py  action_guard.py  memory_drift.py
risklayer/ci/: __init__.py  cli.py  pytest_plugin.py
risklayer/cli/: __init__.py  main.py  tester.py
risklayer/conformal/: weighted.py
risklayer/core/: __init__.py  autotune.py  feedback.py  reports.py  state.py  trajectory.py  utils.py  verdicts.py
risklayer/drift/: __init__.py  ks_test.py
risklayer/evaluators/: __init__.py  hallucination.py  security.py
risklayer/instrumentation/: __init__.py  langchain.py  openai.py
risklayer/integrations/: __init__.py  agent_guard.py  autogen.py  autogen_hook.py  cascade.py  langchain.py  routing.py  stream_guard.py  tiered_guard.py
risklayer/judges/: __init__.py  conformal.py  llm.py  onnx_judge.py
risklayer/optim/: __init__.py  fdr_guard.py
risklayer/quant/: __init__.py  backtester.py  metrics.py
risklayer/runner/: async_queue.py
risklayer/server/: api.py  auth.py  streams.py
risklayer/server/models/: __init__.py  workspace.py
tests/: test_adaptive.py  test_autotune.py  test_conformal.py  test_enterprise.py  test_live_judge.py  test_recovery.py  test_routing.py  test_shadow.py  test_trajectory.py
