[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "noisefloor"
version = "0.1.0"
description = "The convergent statistical verdict engine for AI decisions and quantitative backtesting."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Noisefloor Team" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial :: Investment",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pydantic>=2.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
quant = ["pandas>=2.0", "numba>=0.57"]
ci = ["click>=8.0", "rich>=13.0"]
server = ["fastapi", "uvicorn", "opentelemetry-api", "opentelemetry-sdk", "sse-starlette", "redis", "sqlmodel", "cryptography"]
all = ["pandas>=2.0", "numba>=0.57", "click>=8.0", "rich>=13.0", "aiohttp", "fastapi", "uvicorn", "opentelemetry-api", "opentelemetry-sdk", "redis", "sqlmodel", "cryptography"]

[project.scripts]
noisefloor = "noisefloor.ci.cli:main"

[tool.setuptools]
packages = ["noisefloor"]
